[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pyged"
version = "0.2.0"
authors = [
  { name='Hans Georg Schaathun', email="georg+github@schaathun.net" },
]
description = 'A simple Python GEDCOM parser'
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Sociology :: Genealogy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "GPL-3.0"
license-files = ["LICENSE.txt"]
keywords=[ 'gedcom', 'genealogy', ]

[project.urls]
Homepage = "https://github.com/CosmoAI-AES/CosmoSim"
Issues = "https://github.com/CosmoAI-AES/CosmoSim/issues"
